@startuml

title __LOG's Class Diagram__\n

  namespace com.woonders.lacemsjsf.view.log {
    class com.woonders.lacemsjsf.view.log.LogDTO {
        - nominativoId : long
        - praticaId : long
        {static} + builder()
        + getNominativoId()
        + getPraticaId()
        + getTipoLog()
        + setNominativoId()
        + setPraticaId()
        + setTipoLog()
        ~ LogDTO()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.log {
    class com.woonders.lacemsjsf.view.log.LogDTO.LogDTOBuilder {
        - nominativoId : long
        - praticaId : long
        + build()
        + nominativoId()
        + praticaId()
        + tipoLog()
        + toString()
        ~ LogDTOBuilder()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.log {
    class com.woonders.lacemsjsf.view.log.LogView {
        {static} + JSF_NAME : String
        {static} + NAME : String
        - currentCommentToShow : String
        - nominativoLogViewModelLazyDataModel : LazyDataModel<NominativoLogViewModel>
        - selectedNominativoId : long
        - selectedPraticaId : long
        + getCurrentCommentToShow()
        + getLogService()
        + getNominativoLogViewModelLazyDataModel()
        + getPassaggioParametriUtils()
        + getSelectedNominativoId()
        + getSelectedPraticaId()
        + getTipoLog()
        + init()
        + isRenderedCommandLinkAltro()
        + setCurrentCommentToShow()
        + setLogService()
        + setNominativoLogViewModelLazyDataModel()
        + setPassaggioParametriUtils()
        + setSelectedNominativoId()
        + setSelectedPraticaId()
        + setTipoLog()
    }
  }
  

  com.woonders.lacemsjsf.view.log.LogDTO o-- com.woonders.lacemscommon.service.LogService.TipoLog : tipoLog
  com.woonders.lacemsjsf.view.log.LogDTO +-down- com.woonders.lacemsjsf.view.log.LogDTO.LogDTOBuilder
  com.woonders.lacemsjsf.view.log.LogDTO.LogDTOBuilder o-- com.woonders.lacemscommon.service.LogService.TipoLog : tipoLog
  com.woonders.lacemsjsf.view.log.LogView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.log.LogView o-- com.woonders.lacemscommon.service.LogService : logService
  com.woonders.lacemsjsf.view.log.LogView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.log.LogView o-- com.woonders.lacemscommon.service.LogService.TipoLog : tipoLog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
